# mini-taichi

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  dockerfile  main.cpp  setup.py  test.cpp
cmake/: init.cmake  pybind11.cmake  third_party.cmake
python/: test.py
python/taichi/: __init__.py  gen_anotation.py
taichi/mlir/: CMakeLists.txt
taichi/mlir/include/dialect/boning/: BoningDialect.h  BoningDialect.td
taichi/python/: export.cpp  export.h  export_ui.cpp
taichi/ui/: CMakeLists.txt
taichi/ui/backends/vulkan/: canvas.cpp  canvas.h  renderer.cpp  window.cpp  window.h
taichi/ui/common/: canvas_base.h  window_base.cpp  window_base.h
tools/: gen_anotation.py
